--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav>
+        <img src="/img/the_simpsons.png" alt="" width="200px" height="100px">
+    </nav>
     <%apiData.forEach(data=>{%>
         <section>
         <p><%=data.character%></p>
